# pcsc_server

./: .gitignore  CMakeLists.txt  Readme  main.c  main.cpp  ogon.thrift
